--- a/day_07/demo-jpa/src/main/resources/application.properties
+++ b/day_07/demo-jpa/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/db-User?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db-example?createDatabaseIfNotExist=true
 spring.datasource.username=root
 #spring.datasource.password=YES
 
@@ -11,4 +11,3 @@ spring.datasource.username=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
