--- a/day_06/user-manager/src/main/resources/application.properties
+++ b/day_06/user-manager/src/main/resources/application.properties
@@ -12,3 +12,14 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Hot reload template
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.web.resources.static-locations=file:src/main/resources/static/
+
+# T?ng kích th??c t?p t?i lên không ???c v??t quá 100MB.
+spring.servlet.multipart.max-file-size=100MB
+
+# T?ng kích th??c request cho multipart/form-data không ???c v??t quá 100MB.
+spring.servlet.multipart.max-request-size=100MB
+
