--- a/day_11/demo-thymleaf-spring-security/src/main/resources/application.properties
+++ b/day_11/demo-thymleaf-spring-security/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.security.user.name=cong
 spring.security.user.password=123
-spring.security.user.roles=USER
+spring.security.user.roles=USER, ADMIN
 
 # Hot reload template
 spring.thymeleaf.cache=false
